--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,3 @@
 <h1>Showing Article Details</h1>
-<p><strong>Title: </strong><%= @article.title %></p>
-<p><strong>Description: </strong><%= @article.description %></p>
+<p><strong>Title:</strong><br><%= @article.title %></p>
+<p><strong>Description:</strong><br><%= @article.description %></p>
