--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -5,7 +5,7 @@
 		<tr>
 			<th>Title</th>
 			<th>Description</th>
-			<th>Action</th>
+			<th colspan="3">Action</th>
 		</tr>
 	</thead>
 
@@ -14,8 +14,15 @@
 			<tr>
 				<td><%= article.title %></td>
 				<td><%= article.description %></td>
-				<td>Actions</td>
+				<td><%= link_to 'Show', article_path(article) %></td>
+				<td><%= link_to 'Edit', edit_article_path(article) %></td>
+				<td><%= button_to 'Delete', article_path(article), method: :delete, data: { confirm: "Are your sure?" } %></td>
+
 			</tr>
 		<% end %>
 	</tbody>
 </table>
+
+<p>
+	<%= link_to 'Create new Article', new_article_path %>
+</p>
