--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -29,4 +29,4 @@
 
 <% end %>
 
-<%= link_to 'Return to all articles', articles_path %>
+<%= link_to 'Cancel and return to article listings', articles_path %>
