--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,6 +2,6 @@
 <p><strong>Title:</strong><br><%= @article.title %></p>
 <p><strong>Description:</strong><br><%= @article.description %></p>
 
-<%= link_to 'Edit', edit_article_path(@article) %> |
-<%= button_to 'Delete', article_path(@article), method: :delete, data: { confirm: "Are your sure?" } %> |
-<%= link_to 'Return to all articles', articles_path %>
+<%= link_to 'Edit', edit_article_path(@article) %> | 
+<%= link_to 'Return to all articles', articles_path %><br><br>
+<%= button_to 'Delete', article_path(@article), method: :delete %>
