--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,6 +12,6 @@
 </div>
 <footer id="sticky-footer" class="py-4 bg-dark text-white">
 	<div class="container text-center">
-		<small>Copyright &copy; Your Website</small>
+		<small>Copyright &copy; <%= link_to "GenoFAB", "https://genofab.com", class:"text-white" %></small>
 	</div>
 </footer>
