--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,15 @@
   <body class="d-flex flex-column">
     <%= render 'layouts/navbar' %>
     <%= render 'layouts/messages' %>
-    <%= yield %>
+    <div id="page-content">
+      <%= yield %>
+    </div>
+    <footer id="sticky-footer" class="py-4 bg-dark text-white">
+      <div class="container text-center">
+        <small>
+          Copyright &copy; <%= link_to "GenoFAB", "https://genofab.com", class:"text-white" %>
+        </small>
+      </div>
+  </footer>
   </body>
 </html>
