--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,5 +1,4 @@
-<h1>Create a new article</h1>
+<h1 class="text-center mt-4">Create a new article</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Cancel and return to article listings', articles_path %>
