--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -24,7 +24,9 @@
 				</div>
 
 			<% end %>
-		</div>	
-		<%= link_to '[ Cancel and return to article listings ]', articles_path, class: "text-success" %>
+		</div>
+		<div class="mb-3">
+			<%= link_to '[ Cancel and return to article listings ]', articles_path, class: "text-success" %>
+		</div>
 	</div>
 </div>
