--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,7 +1,26 @@
-<h1>Showing Article Details</h1>
-<p><strong>Title:</strong><br><%= @article.title %></p>
-<p><strong>Description:</strong><br><%= @article.description %></p>
+<div class="container">
+	<div class="row justify-content-md-center">
+		<div class="col-10 mt-4">
+			<h1 class="text-center"><%= @article.title %></h1>
+			<div class="card text-center shadow mb-5 bg-white rounded">
+  				<div class="card-header font-italic">
+    				<%= "by Samuel Peccoud" %>
+  				</div>
+  				<div class="card-body">
+    				<div class="card-text text-left"><%= simple_format(@article.description) %></div>
+    				<a>
+    					<%= link_to "Edit", edit_article_path(@article), class: "btn btn-outline-info" %>
+    					<%= link_to "Delete", article_path(@article), method: :delete, class: "btn btn-outline-danger" %>	
+    				</a>
+  				</div>
+ 	 			<div class="card-footer text-muted">
+    				<small>Created <%= time_ago_in_words(@article.created_at) %> ago, edited <%= time_ago_in_words(@article.updated_at) %> ago</small>
+  				</div>
+			</div>
+			<div class="text-center mb-3">
+				<%= link_to '[ Return to article listings ]', articles_path, class: "text-success" %>
+			</div>
+		</div>
 
-<%= link_to 'Edit', edit_article_path(@article) %> | 
-<%= link_to 'Return to all articles', articles_path %><br><br>
-<%= button_to 'Delete', article_path(@article), method: :delete %>
+	</div>
+</div>
