--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -17,7 +17,10 @@
            <%= link_to "GenoFAB Blog", "https://genofab.com/category/insights/", class: "dropdown-item" %>
           </div>
         </li>
-        <li class="nev-item">
+        <li class="nav-item">
+            <%= link_to "Bloggers", users_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item">
             <%= link_to "About", about_path, class: "nav-link" %>
         </li>
       </ul>
