--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,7 +4,10 @@
 			<h1 class="text-center"><%= @article.title %></h1>
 			<div class="card text-center shadow mb-5 bg-white rounded">
   				<div class="card-header font-italic">
-    				by <%= @article.user.username %>
+    				<% if @article.user %>
+              by <%= link_to @article.user.username, @article.user %>
+              <%= link_to gravatar_for(@article.user), @article.user %>
+            <% end %>
   				</div>
   				<div class="card-body">
     				<div class="card-text text-left"><%= simple_format(@article.description) %></div>
