--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -23,6 +23,12 @@
         <li class="nav-item">
             <%= link_to "About", about_path, class: "nav-link" %>
         </li>
+        <li class="nav-item">
+            <%= link_to "Login", login_path, class: "nav-link" %>
+        </li>
+         <li class="nav-item">
+            <%= link_to "Logout", login_path, class: "nav-link", method: :delete %>
+        </li>
       </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
