--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,9 @@
 <h1 class="text-center mt-4">Bloggers</h1>
 
+<div class="apple_pagination">
+	<%= will_paginate @users, :container => false %>
+</div>
+
 <div class="container">
 	<% @users.each do |user| %>
 		<div class="row justify-content-md-center">
@@ -24,4 +28,8 @@
 		</div>
 		
 	<% end %>
+</div>
+
+<div class="apple_pagination">
+	<%= will_paginate @users, :container => false %>
 </div>
