--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -13,8 +13,10 @@
     					<p class="card-text"><%= truncate(article.description, length: 50) %></p>
     					<a>
     						<%= link_to "View", article_path(article), class: "btn btn-outline-success" %>
-    						<%= link_to "Edit", edit_article_path(article), class: "btn btn-outline-info" %>
-    						<%= link_to "Delete", article_path(article), method: :delete, class: "btn btn-outline-danger" %>	
+                <% if current_user == article.user %>
+    						  <%= link_to "Edit", edit_article_path(article), class: "btn btn-outline-info" %>
+    						  <%= link_to "Delete", article_path(article), method: :delete, class: "btn btn-outline-danger" %>
+                <% end %>
     					</a>
   					</div>
  	 				<div class="card-footer text-muted">
