--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -12,8 +12,10 @@
   				<div class="card-body">
     				<div class="card-text text-left"><%= simple_format(@article.description) %></div>
     				<a>
-    					<%= link_to "Edit", edit_article_path(@article), class: "btn btn-outline-info" %>
-    					<%= link_to "Delete", article_path(@article), method: :delete, class: "btn btn-outline-danger" %>	
+              <% if current_user == @article.user %>
+    					 <%= link_to "Edit", edit_article_path(@article), class: "btn btn-outline-info" %>
+    					 <%= link_to "Delete", article_path(@article), method: :delete, class: "btn btn-outline-danger" %>
+              <% end %>
     				</a>
   				</div>
  	 			<div class="card-footer text-muted">
