--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -17,7 +17,7 @@
     					<p class="card-text"><%= pluralize(user.articles.length, "article") %></p>
     					<a>
     						<%= link_to "View", user_path(user), class: "btn btn-outline-success" %>
-    						<%= link_to "Edit", edit_user_path(user), class: "btn btn-outline-info" %>
+    						<%= link_to "Edit", edit_user_path(user), class: "btn btn-outline-info" if current_user == user %>
     					</a>
   					</div>
  	 				<div class="card-footer text-muted">
