--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
 <%= gravatar_for @user, size: 200 %>
 
 <div class="text-center mt-4">
-	<%= link_to "Edit your profile", edit_user_path(@user), class: "btn btn-outline-info" %>
+	<%= link_to "Edit your profile", edit_user_path(@user), class: "btn btn-outline-info" if current_user == @user %>
 </div>
 
 <h3 class="text-center mt-4">Articles</h3>
