Add security measures

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,7 @@
-<h1 class="text-center mt-4">Sign up to the Blog</h1>
+<h1 class="text-center mt-4">Sign up</h1>
 
 <%= render 'form' %>
+
+<div class="mb-3 text-center">
+	<%= link_to 'Already have an account? Login', login_path, class: "text-success" %>
+</div>
