--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -12,7 +12,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <%= link_to "View articles", articles_path, class: "dropdown-item" %>
-            <%= link_to "Create new article", new_article_path, class: "dropdown-item" %>
+            <%= link_to "Create new article", new_article_path, class: "dropdown-item" if logged_in? %>
           <div class="dropdown-divider"></div>
            <%= link_to "GenoFAB Blog", "https://genofab.com/category/insights/", class: "dropdown-item" %>
           </div>
@@ -20,15 +20,17 @@
         <li class="nav-item">
             <%= link_to "Bloggers", users_path, class: "nav-link" %>
         </li>
-        <li class="nav-item">
-            <%= link_to "About", about_path, class: "nav-link" %>
-        </li>
         <% if logged_in? %>
-          <li class="nav-item">
-              <%= link_to current_user.username, user_path(current_user), class: "nav-link" %>
-          </li>
-          <li class="nav-item">
-              <%= link_to "Logout", login_path, class: "nav-link", method: :delete %>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Profile: <%= current_user.username %>
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <%= link_to "View your profile", user_path(current_user), class: "dropdown-item" %>
+              <%= link_to "Edit your profile", edit_user_path(current_user), class: "dropdown-item" if logged_in? %>
+              <div class="dropdown-divider"></div>
+              <%= link_to "Logout", login_path, class: "dropdown-item", method: :delete %>
+            </div>
           </li>
         <% else %>
           <li class="nav-item">
