--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -18,6 +18,7 @@
     					<a>
     						<%= link_to "View", user_path(user), class: "btn btn-outline-success" %>
     						<%= link_to "Edit", edit_user_path(user), class: "btn btn-outline-info" if current_user == user %>
+                <%= link_to "Delete user", user_path(user), method: :delete, class: "btn btn-outline-danger", data: {confirm: "Are you sure you want to delete the user and all of their articles"} if current_user.admin %>
     					</a>
   					</div>
  	 				<div class="card-footer text-muted">
