--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,6 +4,7 @@
 
 <div class="text-center mt-4">
 	<%= link_to "Edit your profile", edit_user_path(@user), class: "btn btn-outline-info" if current_user == @user %>
+	<%= link_to "Delete user", user_path(@user), method: :delete, class: "btn btn-outline-danger", data: {confirm: "Are you sure you want to delete the user and all of their articles"} if current_user.admin %>
 </div>
 
 <h3 class="text-center mt-4">Articles</h3>
