--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -12,9 +12,11 @@
   				<div class="card-body">
     				<div class="card-text text-left"><%= simple_format(@article.description) %></div>
     				<a>
-              <% if current_user == @article.user || current_user.admin %>
-    					 <%= link_to "Edit", edit_article_path(@article), class: "btn btn-outline-info" %>
-    					 <%= link_to "Delete", article_path(@article), method: :delete, class: "btn btn-outline-danger" %>
+              <% if logged_in? %>
+                <% if current_user == @article.user || current_user.admin %>
+    					   <%= link_to "Edit", edit_article_path(@article), class: "btn btn-outline-info" %>
+    					   <%= link_to "Delete", article_path(@article), method: :delete, class: "btn btn-outline-danger" %>
+                <% end %>
               <% end %>
     				</a>
   				</div>
