--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,8 @@
 <div class="container" id="home-container">
 	<div class="jumbotron text-center text-white">
- 	 <h1 class="display-4">Blog</h1>
- 	 <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+ 	 <h1 class="display-4">Welcome to the Blog</h1>
  	 <hr class="my-4">
- 	 <p>It uses utility classes for typography and spacing to space content out within the larger 	container.</p>
+ 	 <p>This blog was developed as a learning project using Ruby on Rails. I hope you enjoy!</p>
   	<a><%= link_to "Sign up!", signup_path, class: "btn btn-success btn-lg" %></a>
 	</div>
 </div>
